src/test/deca/context/invalid/Objet/assign_Classes.deca
// Description:
//    test d'affectation incompatible entre deux classes différentes
//
// Resultats:
//   20:8: Non compatible assignment of expression
//
// Historique:
//    cree le 20/01/2022

class A {
    int i ;
    
}
class B  {
    
}
{
    A a ; 
    B b ;
    b = a ;
}



